--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -29,9 +29,16 @@
 <!-- Project Files -->
 <link rel="stylesheet" type="text/css" media="all"
 	href="/css/jquery.bootstrap.year.calendar.min.css">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
 <style>
 	#info{
 		color:red;
+	}
+	#ownmenuicon {
+		color: white !important;
+		font-size: 70px;
+		margin-left:0%;
 	}
 </style>
 </head>
