--- a/src/main/resources/templates/registrationperson.html
+++ b/src/main/resources/templates/registrationperson.html
@@ -15,7 +15,8 @@
 	crossorigin="anonymous">
 <script src="/js/jquery-1.7.2.js"></script>
 <script src="/js/pwstrength.js"></script>
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
 <style>
 @
 -webkit-keyframes progress-bar-stripes {
@@ -177,6 +178,11 @@ to {
 
 .input-submit-create-user {
 	width: 15%;
+}
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 </head>
