--- a/src/main/resources/templates/registrationtask.html
+++ b/src/main/resources/templates/registrationtask.html
@@ -14,7 +14,8 @@
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
 <script src="/js/jquery-1.7.2.js"></script>
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
 <style>
 .create-user-form {
 	width: 74%;
@@ -27,6 +28,11 @@
 
 .input-submit-create-user {
 	width: 15%;
+}
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 
