--- a/src/main/resources/templates/usermenu.html
+++ b/src/main/resources/templates/usermenu.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" lang="en">
 <head>
 <title>Layout</title>
 
 <link rel="stylesheet"
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	crossorigin="anonymous">
-
+	crossorigin="anonymous" />
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+  rel="stylesheet">
 </head>
 <body>
 	<div th:fragment="header" class="">
@@ -38,6 +41,10 @@
 					<li class="nav-item"><a class="nav-link" href="listtask.html"
 						th:href="@{/task/(listtask)}">List Tasks <span class="sr-only">(current)</span></a>
 					</li>
+				</ul>
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="viewproject.html"
+						th:href="@{'/person/viewmodify/' + ${person.id}}"><span class="material-icons" id="ownmenuicon">account_circle</span></a></li>
 				</ul>
 			</div>
 		</nav>
