--- a/src/main/resources/templates/formproject.html
+++ b/src/main/resources/templates/formproject.html
@@ -11,6 +11,8 @@
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
 <style>
 .create-user-form {
 	width: 74%;
@@ -27,6 +29,12 @@
 
 .input-submit-create-user {
 	width: 15%;
+}
+
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 </head>
