--- a/src/main/resources/templates/formtask.html
+++ b/src/main/resources/templates/formtask.html
@@ -11,7 +11,9 @@
 	th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}"
 	integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
 	crossorigin="anonymous">
-	<script src="/js/jquery-1.7.2.js"></script>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+	rel="stylesheet" />
+<script src="/js/jquery-1.7.2.js"></script>
 <style>
 .create-user-form {
 	width: 74%;
@@ -34,6 +36,11 @@
 }
 #body{
 	width: 600%;
+}
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 </head>
