--- a/src/main/resources/templates/listperson.html
+++ b/src/main/resources/templates/listperson.html
@@ -9,9 +9,15 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
 	crossorigin="anonymous" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet" />
-<style>.material-icons {
+<style>
+.ownicon {
   color: #343a40!important; 
   margin-left:37%;
+}
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 </head>
@@ -55,11 +61,11 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
                     <td><a th:text="${viewperson.role.name}"> Role </a></td>
                     <td th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>
                     <td th:text="${viewperson.endDate} ? ${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.endDate), #dates.month(viewperson.endDate), #dates.day(viewperson.endDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>                    
-                    <td><a href="viewperson.html" th:href="@{'/person/' + ${viewperson.id}}"><span class="material-icons">visibility</span></a></td>
+                    <td><a href="viewperson.html" th:href="@{'/person/' + ${viewperson.id}}"><span class="material-icons ownicon">visibility</span></a></td>
                     <td><a href="formperson.html" th:href="@{'/person/viewmodify/' + ${viewperson.id}}"> 
-                    	<span class="material-icons">mode_edit</span></a></td>
+                    	<span class="material-icons ownicon">mode_edit</span></a></td>
                     <td><a href="persons" th:href="@{'/person/delete/' + ${viewperson.id}}"> 
-                    	<span class="material-icons md-36">delete</span></a></td>
+                    	<span class="material-icons ownicon md-36">delete</span></a></td>
                     
                 </tr>
             </tbody>
@@ -96,7 +102,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorator="la
                     <td><a th:text="${viewperson.role.name}"> Role </a></td>
                     <td th:text="${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.startDate), #dates.month(viewperson.startDate), #dates.day(viewperson.startDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>
                     <td th:text="${viewperson.endDate} ? ${#calendars.format(#calendars.createForTimeZone(#dates.year(viewperson.endDate), #dates.month(viewperson.endDate), #dates.day(viewperson.endDate),'UTC'), 'yyyy-MMM-dd')}">July 11, 2012 2:17:16 PM CDT</td>                    
-                    <td><a href="viewperson.html" th:href="@{'/person/' + ${viewperson.id}}"><span class="material-icons">visibility</span></a></td>                    
+                    <td><a href="viewperson.html" th:href="@{'/person/' + ${viewperson.id}}"><span class="material-icons ownicon">visibility</span></a></td>                    
                 </tr>
             </tbody>
         </table>
