--- a/src/main/resources/templates/listproject.html
+++ b/src/main/resources/templates/listproject.html
@@ -13,9 +13,14 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet" />
 <style>
-.material-icons {
+.ownicon {
 	color: #343a40 !important;
 	margin-left:37%;
+}
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
 }
 </style>
 </head>
@@ -58,13 +63,13 @@
 					11, 2012 2:17:16 PM CDT</td>
 				<td><a href="viewproject.html"
 					th:href="@{'/project/' + ${project.id}}"><span
-						class="material-icons">visibility</span></a></td>
+						class="material-icons ownicon">visibility</span></a></td>
 				<td><a href="formproject.html"
 					th:href="@{'/project/viewmodify/' + ${project.id}}"> <span
-						class="material-icons">mode_edit</span></a></td>
+						class="material-icons ownicon">mode_edit</span></a></td>
 				<td><a href="persons"
 					th:href="@{'/project/delete/' + ${project.id}}"> <span
-						class="material-icons md-36">delete</span></a></td>
+						class="material-icons ownicon md-36">delete</span></a></td>
 			</tr>
 		</tbody>
 	</table>
@@ -97,7 +102,7 @@
 					11, 2012 2:17:16 PM CDT</td>
 				<td><a href="viewproject.html"
 					th:href="@{'/project/' + ${project.id}}"><span
-						class="material-icons">visibility</span></a></td>
+						class="material-icons ownicon">visibility</span></a></td>
 			</tr>
 		</tbody>
 	</table>
