--- a/src/main/resources/templates/listtask.html
+++ b/src/main/resources/templates/listtask.html
@@ -17,6 +17,11 @@
 	color: #343a40 !important;
 	margin-left: 37%;
 }
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
+}
 </style>
 </head>
 <body>
@@ -60,13 +65,13 @@
 						11, 2012 2:17:16 PM CDT</td>
 					<td><a href="viewtask.html"
 						th:href="@{'/task/' + ${task.id}}"><span
-							class="material-icons">visibility</span></a></td>
+							class="material-icons ownicon">visibility</span></a></td>
 					<td><a href="formtask.html"
 						th:href="@{'/task/viewmodify/' + ${task.id}}"> <span
-							class="material-icons">mode_edit</span></a></td>
+							class="material-icons ownicon">mode_edit</span></a></td>
 					<td><a href="tasks"
 						th:href="@{'/task/delete/' + ${task.id}}"> <span
-							class="material-icons md-36">delete</span></a></td>
+							class="material-icons ownicon md-36">delete</span></a></td>
 				</tr>
 			</tbody>
 		</table>
@@ -101,10 +106,10 @@
 						11, 2012 2:17:16 PM CDT</td>
 					<td><a href="viewtask.html"
 						th:href="@{'/task/' + ${task.id}}"><span
-							class="material-icons">visibility</span></a></td>
+							class="material-icons ownicon">visibility</span></a></td>
 					<td><a href="formtask.html"
 						th:href="@{'/task/viewmodify/' + ${task.id}}"> <span
-							class="material-icons">mode_edit</span></a></td>
+							class="material-icons ownicon">mode_edit</span></a></td>
 				</tr>
 			</tbody>
 		</table>
