--- a/src/main/resources/templates/viewtask.html
+++ b/src/main/resources/templates/viewtask.html
@@ -34,6 +34,11 @@
 .input-submit-create-user {
 	width: 15%;
 }
+#ownmenuicon {
+	color: white !important;
+	font-size: 70px;
+	margin-left:0%;
+}
 </style>
 </head>
 <body>
